# mushroom-bot

./: .gitignore  Cargo.toml  attacker.txt  balanced.txt  build.rs  defender.txt  setting.ini
data/: current_weights.txt
lose-log/: 1 (1).txt  1 (2).txt  1 (3).txt  1 (4).txt  1 (5).txt  2 (1).txt  2 (2).txt  2 (4).txt  2 (5).txt  2.txt
scripts/: analyze_benchmark.py  clean_and_rebuild.ps1  log.txt  log_to_training_data.py  merge.py  mushroom_bot_wrapper.py  opening_samples.init.txt  opening_samples_100.init.txt  replay_diagnose.py  report_benchmark_history.ps1  run_chaos.ps1  run_cordyceps_vs_mushroom_py.ps1  run_eval_vs_mushroom_py.ps1  run_mushroom_bot_vs_mushroom_py.ps1  run_pool_train.ps1  run_vs_cordyceps.ps1  run_zoo.ps1  run_zoo_full.ps1  selfplay_loop.ps1  selfplay_vs_python.ps1  zoo_bot.py
src/: bitboard.rs  board.rs  dataloader.rs  eval.rs  lib.rs  main.rs  mcts.rs  movegen.rs  mquality.rs  timeman.rs  tt.rs  types.rs
src/end_game/: mod.rs  ordering.rs  search.rs
src/mid_game/: ordering.rs
src/opening/: first.rs  mod.rs  ordering.rs  second.rs  side.rs  stealth.rs  traps.rs
src/search/: mod.rs  negamax.rs  ordering.rs  pruning.rs  result.rs  root.rs  tactics.rs
src/side/: mod.rs
tests/: tournament_runner.rs
tests/integration/: no_timeout.rs  search_correctness.rs
tests/integration/regression/: mod.rs  positions.rs
tests/perf/: depth_search.rs  node_throughput.rs  search_efficiency.rs
tests/unit/: board_tests.rs  eval_tests.rs  hash_tests.rs  timeman_tests.rs
